# capture-run

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/actions/: setup-poetry.yml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: publish.yml  pytest.yml
capture/: __init__.py  asyncron.py
capture_run/: __init__.py
subprocess_run/: __init__.py  run.py
tests/: conftest.py  test_exec.py  test_run.py  test_runner.py  test_shell.py
