[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "subprocess-run"
version = "0.1.0"
description = ""
authors = [ "Christoph Dörrer <d-chris@web.de>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.isort]
profile = "black"
force_single_line = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
addopts = [ "--color=yes" ]

[tool.coverage.run]
sigterm = true
omit = [ "*/tests/*" ]

[tool.coverage.report]
exclude_lines = [ "^if TYPE_CHECKING:" ]
